borsh-derive/src/internals/schema/enums/snapshots/check_with_funcs_skip_conflict.snap
---
source: borsh-derive/src/internals/schema/enums/mod.rs
expression: actual.unwrap_err()
---
Error(
    "`borsh_skip` cannot be used at the same time as `schema(with_funcs(...))`",
)
