borsh-derive/src/internals/schema/enums/snapshots/generic_associated_type_param_override.snap
---
source: borsh-derive/src/internals/schema/enums/mod.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
impl<T, K, V> borsh::BorshSchema for EnumParametrized<T, K, V>
where
    K: TraitName,
    K: core::cmp::Ord,
    V: core::cmp::Ord,
    T: Eq + Hash,
    T: borsh::BorshSchema,
    K: borsh::BorshSchema,
    <K as TraitName>::Associated: borsh::BorshSchema,
    V: borsh::BorshSchema,
{
    fn declaration() -> borsh::schema::Declaration {
        let params = borsh::__private::maybestd::vec![
            < T > ::declaration(), < K > ::declaration(), < < K as TraitName >
            ::Associated > ::declaration(), < V > ::declaration()
        ];
        format!(r#"{}<{}>"#, "EnumParametrized", params.join(", "))
    }
    fn add_definitions_recursively(
        definitions: &mut borsh::__private::maybestd::collections::BTreeMap<
            borsh::schema::Declaration,
            borsh::schema::Definition,
        >,
    ) {
        #[allow(dead_code)]
        #[derive(borsh::BorshSchema)]
        #[borsh(crate = "borsh")]
        struct EnumParametrizedB<K, V>
        where
            K: TraitName,
            K: core::cmp::Ord,
            V: core::cmp::Ord,
        {
            x: BTreeMap<K, V>,
            y: String,
            #[borsh(schema(params = "K => <K as TraitName>::Associated"))]
            z: <K as TraitName>::Associated,
        }
        #[allow(dead_code)]
        #[derive(borsh::BorshSchema)]
        #[borsh(crate = "borsh")]
        struct EnumParametrizedC<T>(
            T,
            u16,
        )
        where
            T: Eq + Hash;
        <EnumParametrizedB<
            K,
            V,
        > as borsh::BorshSchema>::add_definitions_recursively(definitions);
        <EnumParametrizedC<
            T,
        > as borsh::BorshSchema>::add_definitions_recursively(definitions);
        let definition = borsh::schema::Definition::Enum {
            tag_width: 1,
            variants: borsh::__private::maybestd::vec![
                (0u8 as i64, "B".to_string(), < EnumParametrizedB < K, V > >
                ::declaration()), (1u8 as i64, "C".to_string(), < EnumParametrizedC < T >
                > ::declaration())
            ],
        };
        borsh::schema::add_definition(Self::declaration(), definition, definitions);
    }
}

