borsh-derive/src/internals/schema/enums/snapshots/generic_associated_type_param_override_conflict.snap
---
source: borsh-derive/src/internals/schema/enums/mod.rs
expression: actual.unwrap_err()
---
Error(
    "`borsh_skip` cannot be used at the same time as `schema(params = ...)`",
)
